k8s/clusters/cluster-0/manifests/selfhosted/vault-docker/ingress.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: vault_docker
  namespace: selfhosted
spec:
  externalName: "docker2.${SECRET_INTERNAL_DOMAIN}"
  type: ExternalName

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault_docker
  namespace: selfhosted
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: "nginx-internal"
  tls:
  - hosts:
    - &host vault.${SECRET_DOMAIN}
    secretName: tls.vault_docker
  rules:
  - host: *host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: vault_docker
            port:
              number: 8200
status:
  loadBalancer: {}
